<resources>
    <string name="app_name">Gears</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="get_started">Get Started</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="car">Car</string>
    <string name="model">Model</string>
    <string name="insurance">Insurance</string>
    <string name="owner">Owner</string>
    <string name="details">Details</string>
    <string name="emergency">Emergency</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_location_permission">Location</string>
    <string name="text_location_permission">We need your location access</string>
    <string name="contact">Contact</string>
    <string name="welcome">welcome,</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_a_account">Don\'t have a account?</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_2">sign Up</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_address">Enter Address</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="car_model">Car Model</string>
    <string name="enter_car_model">Enter Car Model</string>
    <string name="enter_insurance_number">Enter Insurance Number</string>
    <string name="car_registration_number">Car Registration Number</string>
    <string name="enter_car_registration_number">Enter Car Registration Number</string>
    <string name="enter_emergency_number">Enter Emergency Number</string>
    <string name="owner_caps">OWNER</string>
    <string name="next">NEXT</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCKXh3pBeT257JfIt4Kt9WX-QZBIFHXlPM</string>
    <string name="actions">Actions</string>
    <string name="loading_location">Fetching Location</string>
    <string name="edit_details">Edit Details</string>
    <string name="person_name">Person Name</string>
    <string name="person_address">Person Address</string>
    <string name="person_phone_number">Person Phone Number</string>
    <string name="sign_out">Sign out</string>
</resources>
