<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_model"
            android:title="@string/model" />
        <item
            android:id="@+id/nav_insurance"
            android:title="@string/insurance" />
        <item
            android:id="@+id/nav_owner"
            android:title="@string/owner" />
        <item
            android:id="@+id/nav_details"
            android:title="@string/details" />
        <item
            android:id="@+id/nav_emergency"
            android:title="@string/emergency" />
        <item
            android:id="@+id/logOut"
            android:title="@string/sign_out" />
    </group>

</menu>
