<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragment.LoginFragment"
        android:background="#FAF8F0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="52sp"
            android:text="@string/app_name"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:textColor="#043353"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:id="@+id/appName"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appName"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:id="@+id/welcomeContainer">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#E44652"
                android:text="@string/welcome"
                android:textSize="32sp"
                android:fontFamily="@font/poppins_semibold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#AFAFAF"
                android:text="@string/sign_in_to_continue"
                android:textSize="32sp"
                android:fontFamily="@font/poppins_semibold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_below="@+id/welcomeContainer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textSize="22sp"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/email"
                android:id="@+id/emailText"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:id="@+id/passwordText"
                android:textSize="22sp"
                android:fontFamily="@font/poppins_regular"
                android:importantForAutofill="no"
                android:inputType="textPassword"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:gravity="end"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:textColor="#AFAFAF"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:id="@+id/loginBtn"
                android:textSize="22sp"
                android:background="#E44652"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:id="@+id/signUpContainer"
                android:background="?attr/selectableItemBackground"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="#AFAFAF"
                    android:textSize="18sp"
                    android:text="@string/don_t_have_a_account"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="#E44652"
                    android:text="@string/sign_up"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp" />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</layout>