<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="44sp"
                    android:textAllCaps="false"
                    android:text="@string/name"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="#E44652" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/person_name"
                    android:id="@+id/personName"
                    android:textSize="24sp"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="44sp"
                    android:textAllCaps="false"
                    android:text="@string/address"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="#E44652" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/person_address"
                    android:textSize="24sp"
                    android:id="@+id/personAddress"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="44sp"
                    android:textAllCaps="false"
                    android:text="@string/phone_number"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="#E44652" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/person_phone_number"
                    android:id="@+id/personPhoneNumber"
                    android:textSize="24sp"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp" />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:id="@+id/fab"
            android:layout_alignParentRight="true"
            app:backgroundTint="#043353"
            android:src="@drawable/ic_mode_edit_white_24dp"/>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:id="@+id/progress_circular"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

</layout>