<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        tools:context=".Fragment.OwnerDetailsFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="#fff">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/toolbar">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_arrow_back_red_24dp"
                    android:id="@+id/back"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/owner_caps"
                    android:textColor="#E44652"
                    android:textSize="54sp"
                    android:textStyle="bold"
                    android:layout_marginStart="25dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/back"
                    android:fontFamily="@font/agency"
                    android:layout_toRightOf="@+id/back"
                    android:layout_toStartOf="@+id/next"
                    android:layout_marginLeft="25dp"
                    android:layout_toLeftOf="@+id/next" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:id="@+id/next"
                    android:textColor="#80E44652"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/agency"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="10dp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/toolbar"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#F0F0F0"
                    app:cardCornerRadius="10dp"
                    android:layout_marginBottom="25dp"
                    android:background="?attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:textSize="14sp"
                            android:textColor="#000"
                            android:layout_marginStart="10dp"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/poppins_regular"
                            android:layout_marginLeft="10dp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_name"
                            android:background="@null"
                            android:layout_marginStart="10dp"
                            android:textSize="18sp"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:id="@+id/nameEditText"
                            android:layout_marginLeft="10dp" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#F0F0F0"
                    app:cardCornerRadius="10dp"
                    android:layout_marginBottom="25dp"
                    android:background="?attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/address"
                            android:textSize="14sp"
                            android:textColor="#000"
                            android:layout_marginStart="10dp"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/poppins_regular"
                            android:layout_marginLeft="10dp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_address"
                            android:background="@null"
                            android:layout_marginStart="10dp"
                            android:textSize="18sp"
                            android:importantForAutofill="no"
                            android:id="@+id/addressEditText"
                            android:inputType="textPostalAddress"
                            android:layout_marginLeft="10dp" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#F0F0F0"
                    app:cardCornerRadius="10dp"
                    android:layout_marginBottom="25dp"
                    android:background="?attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone_number"
                            android:textSize="14sp"
                            android:textColor="#000"
                            android:layout_marginStart="10dp"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/poppins_regular"
                            android:layout_marginLeft="10dp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_phone_number"
                            android:background="@null"
                            android:layout_marginStart="10dp"
                            android:textSize="18sp"
                            android:maxLength="10"
                            android:importantForAutofill="no"
                            android:inputType="phone"
                            android:id="@+id/phoneNumberEditText"
                            android:layout_marginLeft="10dp" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#F0F0F0"
                    app:cardCornerRadius="10dp"
                    android:layout_marginBottom="25dp"
                    android:background="?attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/car_model"
                            android:textSize="14sp"
                            android:textColor="#000"
                            android:layout_marginStart="10dp"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/poppins_regular"
                            android:layout_marginLeft="10dp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_car_model"
                            android:background="@null"
                            android:layout_marginStart="10dp"
                            android:textSize="18sp"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:id="@+id/carModelEditText"
                            android:layout_marginLeft="10dp" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#F0F0F0"
                    app:cardCornerRadius="10dp"
                    android:layout_marginBottom="25dp"
                    android:background="?attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/car_registration_number"
                            android:textSize="14sp"
                            android:textColor="#000"
                            android:layout_marginStart="10dp"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/poppins_regular"
                            android:layout_marginLeft="10dp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_car_registration_number"
                            android:background="@null"
                            android:layout_marginStart="10dp"
                            android:textSize="18sp"
                            android:importantForAutofill="no"
                            android:id="@+id/carRegistrationEditText"
                            android:inputType="text"
                            android:layout_marginLeft="10dp" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#F0F0F0"
                    app:cardCornerRadius="10dp"
                    android:layout_marginBottom="25dp"
                    android:background="?attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/insurance"
                            android:textSize="14sp"
                            android:textColor="#000"
                            android:layout_marginStart="10dp"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/poppins_regular"
                            android:layout_marginLeft="10dp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_insurance_number"
                            android:background="@null"
                            android:layout_marginStart="10dp"
                            android:textSize="18sp"
                            android:importantForAutofill="no"
                            android:id="@+id/insuranceEditText"
                            android:inputType="text"
                            android:layout_marginLeft="10dp" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#F0F0F0"
                    app:cardCornerRadius="10dp"
                    android:layout_marginBottom="25dp"
                    android:background="?attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/emergency"
                            android:textSize="14sp"
                            android:textColor="#000"
                            android:layout_marginStart="10dp"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/poppins_regular"
                            android:layout_marginLeft="10dp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_emergency_number"
                            android:background="@null"
                            android:layout_marginStart="10dp"
                            android:textSize="18sp"
                            android:maxLength="10"
                            android:importantForAutofill="no"
                            android:inputType="phone"
                            android:id="@+id/emergencyEditText"
                            android:layout_marginLeft="10dp" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</layout>